[package]
name = "inferno-inference"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Inference engine implementation for Inferno with Burn ML framework support"

[dependencies]
# Workspace dependencies
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
async-trait = { workspace = true }
chrono = { workspace = true }

# Local dependencies
inferno-shared = { workspace = true }

# Configuration and environment
config = { workspace = true }
toml = { workspace = true }
num_cpus = { workspace = true }

# JSON and validation
validator = { workspace = true }

# Burn ML Framework for real model inference
burn = { workspace = true, features = ["ndarray", "autodiff"] }
burn-import = { workspace = true }
llama-burn = { workspace = true }

# Required dependencies for model loading
tokenizers = { workspace = true }
hf-hub = { workspace = true, features = ["tokio"] }
safetensors = { workspace = true }

[dev-dependencies]
tokio-test = { workspace = true }
criterion = { workspace = true }
proptest = { workspace = true }
serial_test = { workspace = true }
tempfile = { workspace = true }
rstest = { workspace = true }